# iish

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  installer-verify-live.yml  installer-verify.yml
corpus/: ANALYSIS.md  fetch.sh
corpus/adversarial/: README.md  env-file-inject-persistence.sh  overwrite-ssh-key-outside-grammar.sh  root-wipe.sh  symlink-escape-chmod.sh  symlink-escape-rm.sh
corpus/cache/: README.md
docs/: parser-eval.md
scripts/: verify-installers.sh
scripts/installer-verify/: Dockerfile  run-adversarial.sh  run-corpus.sh  run.sh
scripts/installer-verify/fixtures/: toy-installer.sh
src/: config.rs  exec.rs  main.rs  parser.rs  policy.rs  prompt.rs  state.rs
tests/: cli.rs
