[package]
name = "iish"
version = "0.1.0"
edition = "2021"
description = "A safe interpreter for curl-pipe-to-shell install scripts"
license = "MIT"

[dependencies]
brush-parser = { version = "0.4.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
ureq = { version = "2", features = ["native-certs"] }
